Fix center alignment on donate button text

--- a/src/components/css/Donatebutton.css
+++ b/src/components/css/Donatebutton.css
@@ -1,30 +1,30 @@
 .donate-btn {
-    background: #0c683f;
-    font-size: 26px;
-    color: #fff;
-    text-decoration: none;
-    font-family: "Questrial", sans-serif;
-    padding: 10px 30px;
-    display: inline-block;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    border: none;
-    min-width: 250px;
+  background: #0c683f;
+  font-size: 26px;
+  color: #fff;
+  text-decoration: none;
+  font-family: "Questrial", sans-serif;
+  padding: 10px 30px;
+  display: inline-block;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  border: none;
+  min-width: 250px;
 }
 .donate-btn > .fa-tree {
-   color: #fff;
-   font-size: 2.3rem;
-   transform: translate(-10px);
+  color: #fff;
+  font-size: 2.3rem;
+  transform: translate(-3px);
 }
 
 .btn-wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .donate-btn:hover {
-    background: #0f8a53;
-    transition-timing-function: ease-in;
-    transition-duration: 0.1s;
+  background: #0f8a53;
+  transition-timing-function: ease-in;
+  transition-duration: 0.1s;
 }
